k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knpodly-backend
  namespace: knpodly
spec:
  selector: { app: knpodly-backend }
  ports:
    - port: 8000
      targetPort: 8000
