k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knpodly-frontend
  namespace: knpodly
spec:
  selector: { app: knpodly-frontend }
  ports:
    - port: 80
      targetPort: 80
